--- a/GUI_BASE.ui
+++ b/GUI_BASE.ui
@@ -182,6 +182,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>210</red>
+        <green>210</green>
+        <blue>210</blue>
+       </color>
+      </brush>
+     </colorrole>
     </active>
     <inactive>
      <colorrole role="WindowText">
@@ -346,6 +355,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>210</red>
+        <green>210</green>
+        <blue>210</blue>
+       </color>
+      </brush>
+     </colorrole>
     </inactive>
     <disabled>
      <colorrole role="WindowText">
@@ -504,6 +522,15 @@
      <colorrole role="ToolTipText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
+        <red>210</red>
+        <green>210</green>
+        <blue>210</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
         <red>210</red>
         <green>210</green>
         <blue>210</blue>
@@ -1815,8 +1842,8 @@ QFrame QPushButton:pressed {
                    <widget class="QPushButton" name="CanTransClick_Btn">
                     <property name="geometry">
                      <rect>
-                      <x>260</x>
-                      <y>10</y>
+                      <x>70</x>
+                      <y>240</y>
                       <width>93</width>
                       <height>28</height>
                      </rect>
@@ -1847,9 +1874,9 @@ QFrame QPushButton:pressed {
                     <property name="geometry">
                      <rect>
                       <x>260</x>
-                      <y>60</y>
+                      <y>10</y>
                       <width>621</width>
-                      <height>521</height>
+                      <height>571</height>
                      </rect>
                     </property>
                     <property name="styleSheet">
@@ -1911,6 +1938,12 @@ QHeaderView::section:vertical
                     <property name="sizeAdjustPolicy">
                      <enum>QAbstractScrollArea::AdjustToContents</enum>
                     </property>
+                    <property name="autoScroll">
+                     <bool>true</bool>
+                    </property>
+                    <property name="alternatingRowColors">
+                     <bool>false</bool>
+                    </property>
                     <attribute name="horizontalHeaderVisible">
                      <bool>true</bool>
                     </attribute>
@@ -1923,14 +1956,12 @@ QHeaderView::section:vertical
                     <attribute name="horizontalHeaderStretchLastSection">
                      <bool>true</bool>
                     </attribute>
+                    <attribute name="verticalHeaderVisible">
+                     <bool>false</bool>
+                    </attribute>
                     <attribute name="verticalHeaderStretchLastSection">
                      <bool>false</bool>
                     </attribute>
-                    <row>
-                     <property name="text">
-                      <string>New Row</string>
-                     </property>
-                    </row>
                     <column>
                      <property name="text">
                       <string>ID</string>
@@ -1951,26 +1982,6 @@ QHeaderView::section:vertical
                       <string>数据</string>
                      </property>
                     </column>
-                    <item row="0" column="0">
-                     <property name="text">
-                      <string>ID</string>
-                     </property>
-                    </item>
-                    <item row="0" column="1">
-                     <property name="text">
-                      <string>方向</string>
-                     </property>
-                    </item>
-                    <item row="0" column="2">
-                     <property name="text">
-                      <string>长度</string>
-                     </property>
-                    </item>
-                    <item row="0" column="3">
-                     <property name="text">
-                      <string>数据</string>
-                     </property>
-                    </item>
                    </widget>
                   </widget>
                   <widget class="QWidget" name="page_widgets">
@@ -2298,7 +2309,7 @@ QScrollBar:horizontal {
                              <rect>
                               <x>0</x>
                               <y>0</y>
-                              <width>278</width>
+                              <width>222</width>
                               <height>222</height>
                              </rect>
                             </property>
@@ -2547,6 +2558,15 @@ QCommandLinkButton:pressed {
                               </color>
                              </brush>
                             </colorrole>
+                            <colorrole role="PlaceholderText">
+                             <brush brushstyle="NoBrush">
+                              <color alpha="128">
+                               <red>210</red>
+                               <green>210</green>
+                               <blue>210</blue>
+                              </color>
+                             </brush>
+                            </colorrole>
                            </active>
                            <inactive>
                             <colorrole role="WindowText">
@@ -2603,6 +2623,15 @@ QCommandLinkButton:pressed {
                               </color>
                              </brush>
                             </colorrole>
+                            <colorrole role="PlaceholderText">
+                             <brush brushstyle="NoBrush">
+                              <color alpha="128">
+                               <red>210</red>
+                               <green>210</green>
+                               <blue>210</blue>
+                              </color>
+                             </brush>
+                            </colorrole>
                            </inactive>
                            <disabled>
                             <colorrole role="WindowText">
@@ -2656,6 +2685,15 @@ QCommandLinkButton:pressed {
                                <red>39</red>
                                <green>44</green>
                                <blue>54</blue>
+                              </color>
+                             </brush>
+                            </colorrole>
+                            <colorrole role="PlaceholderText">
+                             <brush brushstyle="NoBrush">
+                              <color alpha="128">
+                               <red>210</red>
+                               <green>210</green>
+                               <blue>210</blue>
                               </color>
                              </brush>
                             </colorrole>
